# macvlan-unifios

./: .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  gpl-dump-archive.json  pyproject.toml
.github/ISSUE_TEMPLATE/: new-firmware-request.md  new-firmware-request.yaml
.github/workflows/: build-kernel-modules.yml  build.yml  increment_minor_version.yml  new-firmware-request-issue.yml
.schemas/: device_metadata.schema.json  firmware_metadata.schema.json
ci/: build_release_text_files.py  generate_build_matrix.py  generate_release_notes.py  get_all_crosscompilers.py  get_device_metadata.py  get_fields_from_new_firmware_issue.py  get_firmware_metadata.py  parse_archive_info.py  release_template.md.j2  render_request_email_issue_comment.py  setup_macvlan.sh.tpl
ci/templates/: checksums.txt.j2  gpl_archive_request_email_comment.md.j2  release_template.md.j2  setup_macvlan.sh.j2
ci/workflow_testing/: new-firmware-request.event.json
devices/UDM/: device_metadata.json
devices/UDM/2.4.27/: firmware_metadata.json  kernel-config
devices/UDMP/2.4.27/: firmware_metadata.json  kernel-config
devices/UDR/2.2.12/: firmware_metadata.json  kernel-config  linux-udr_notes.txt
devices/UDR/3.0.13/: firmware_metadata.json  linux-udr_notes.txt
devices/UDR/3.0.17/: firmware_metadata.json  kernel-config
firmware/2.2.12/: kernel-url.txt
firmware/2.2.12/patches/: 0002-update-macvlan-module-description.patch
firmware/3.0.13/: kernel-config  kernel-url.txt  linux-udr.tar.gz.sum
firmware/3.0.13/patches/: 0001-fix-dtc-lexer.patch
(+2 files in other folders)
